# helens

./: .gitignore  AUTHORS.md  CITATION.md  HISTORY.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi.yml
examples/: general_use_example.ipynb  solver_comparisons.ipynb
helens/: __init__.py  info.py  solver.py
slax/: __init__.py  info.py  solver.py
